# cool-tunnel

./: .gitignore  .swift-format  CHANGELOG.md  CONTRIBUTING.md  Disclaimer.md  NOTICE  NaiveProxy_Server_Setup.md  README.md  SECURITY-WEB3.md  SECURITY.md  SUPPORT.md  debug_proxy.sh  debug_server.sh  debug_step_by_step.sh  package.json  rust-toolchain.toml  server_commands.txt  tsconfig.json
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  naive-pin-audit.yml  singbox-core-pin-audit.yml
COOL-TUNNEL/: naive.entitlements  naive.upstream.json  singbox-core.upstream.json  singbox.entitlements
COOL-TUNNEL.xcodeproj/: project.pbxproj
COOL-TUNNEL.xcodeproj/xcshareddata/xcschemes/: COOL-TUNNEL.xcscheme
COOL-TUNNEL.xcodeproj/xcuserdata/lukebai.xcuserdatad/xcschemes/: xcschememanagement.plist
COOL-TUNNEL/App/: AppDelegate.swift  CoolTunnelApp.swift
COOL-TUNNEL/Assets.xcassets/AppIcon.appiconset/: Contents.json
COOL-TUNNEL/Core/: CoolTunnelState.swift  CoreClient.swift  DeveloperMetrics.swift  LifecycleTelemetryLogger.swift  Protocol.swift  StringExtensions.swift  Subscription.swift  SubscriptionClient.swift  TunnelOrchestrator.swift
COOL-TUNNEL/Persistence/: CredentialStore.swift  FileCredentialStore.swift  KeychainStore.swift  ProfileStore.swift  SettingsStore.swift
COOL-TUNNEL/SystemIntegration/: AppSupportPaths.swift  AppUpdater.swift  AppVersion.swift  BinaryInspector.swift  BinaryUpdater.swift  CodeSignVerifier.swift  FirewallProbe.swift  GitHubTrust.swift  HostArchitecture.swift  HostMachine.swift  LipoOutputParser.swift  NaiveBinaryResolver.swift  NaiveUpdater.swift  PerformanceProfile.swift  ProxyActiveFlag.swift  RustCoreResolver.swift  RustCoreUpdater.swift  SHAVerifier.swift  SingboxBinaryResolver.swift  SingboxUpdater.swift  Subprocess.swift  SystemProxyController.swift  UpdaterError.swift
COOL-TUNNEL/Views/: AcknowledgementsView.swift  ConnectionFormView.swift  ContentView.swift  ControlPanelView.swift  DeveloperOverlayView.swift  HeaderView.swift  LogConsoleView.swift  MalteseTheme.swift  MenuBarStatusContent.swift  NewJeansTheme.swift  SettingsView.swift
COOL-TUNNEL/Views/Components/: UIComponents.swift
COOL-TUNNELTests/: BinaryInspectorTests.swift  CredentialAutoSyncTests.swift  DebugHandshakeClassifierTests.swift  GitHubTrustTests.swift  LifecycleTelemetryRedactionTests.swift  LipoOutputParserTests.swift  MigratingCredentialStoreTests.swift  MockCredentialStore.swift  ProfileStoreTests.swift  ProxyActiveFlagTests.swift  SHAVerifierTests.swift  SubscriptionValidationTests.swift  TunnelOrchestratorTests.swift
core/: Cargo.toml  build.rs  deny.toml  rust-toolchain.toml
core/src/: client_mode.rs  error.rs  lib.rs  main.rs  preflight.rs  protocol.rs  redaction.rs  server_mode.rs
core/src/config/: mod.rs  naive_config.rs  pac.rs  singbox_config.rs
core/src/diagnostics/: debug_handshake.rs  metrics.rs  mod.rs  probe.rs
core/src/domain/: credentials.rs  mod.rs  port.rs  profile.rs  proxy_mode.rs  server.rs
core/src/monitor/: heuristics.rs  lsof.rs  mod.rs
core/src/supervisor/: mod.rs
core/src/util/: debounce.rs  mod.rs
core/tests/: chaos.rs  protocol_roundtrip.rs
docs/: session-prompts-summary.xlsx  v0.1.5-roadmap.md
docs/adr/: 0001-audit-rules-locked-2026-05-05.md
docs/audits/code/: 2026-05-05T164718Z.md
docs/audits/ui/: 2026-05-04T144534Z.md
naive/: ContentView.swift  naiveApp.swift
naive.xcodeproj/: project.pbxproj
naive.xcodeproj/xcuserdata/lukebai.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: Distribution.xml.template  add_test_target.rb  audit.sh  audit.test.ts  audit.ts  build_rust_core.sh  cut_release.sh  cut_release.test.ts  cut_release.ts  fetch_naive.sh  fetch_naive.test.ts  fetch_naive.ts  fetch_singbox-core.sh  fetch_singbox-core.test.ts  fetch_singbox-core.ts  generate_app_icon.swift  package_release.sh  package_release.test.ts  package_release.ts  preflight.sh  preflight.test.ts  preflight.ts  security_check.sh  security_check.test.ts  security_check.ts  try_question_ratchet.sh  try_question_ratchet.test.ts  try_question_ratchet.ts
scripts/lib/: cargo.test.ts  cargo.ts  log.ts  macho.test.ts  macho.ts  paths.ts  secrets.test.ts  secrets.ts  spawn.ts
tests/fixtures/: subscription_manifest_v1.json  subscription_manifest_v2.json
