[package]
name = "cool-tunnel-core"
version = "0.1.5"
edition = "2021"
rust-version = "1.80"
description = "Cross-platform Rust engine for Cool Tunnel — JSON-over-stdio client and HTTP server modes"
license = "Apache-2.0"
repository = "https://github.com/coo1white/cool-tunnel"
homepage = "https://github.com/coo1white/cool-tunnel"
documentation = "https://github.com/coo1white/cool-tunnel/tree/main/core"
readme = "../README.md"
keywords = ["proxy", "naive", "tunnel", "macos", "censorship"]
categories = ["command-line-utilities", "network-programming"]
publish = false

[lib]
name = "cool_tunnel_core"
path = "src/lib.rs"

[[bin]]
name = "cool-tunnel-core"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "io-std",
    "sync",
    "time",
    "signal",
    "net",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Server-mode HTTP API. Pulled in only for `--mode server` paths;
# client mode (the macOS app's stdin/stdout dispatch) does not
# touch axum at all but the dependency adds ~600 KB to the
# universal binary. Keeping default-features off so we don't drag
# in tower-http / matchit-fs / multipart machinery we don't use.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[profile.release]
# Performance tuning for macOS distribution. The engine is a long-
# lived subprocess that ships in every Cool Tunnel app, so we
# optimize hard once at build time:
#
# - opt-level = 3      → maximum compiler optimization
# - lto = "fat"        → cross-crate inlining, smaller + faster
#                        binary at the cost of slower link
# - codegen-units = 1  → single codegen unit lets LLVM see the
#                        whole crate; pairs with LTO for the best
#                        optimization quality
# - panic = "abort"    → drop the unwinding tables; saves tens of
#                        KB and a few % runtime cost. A panic in
#                        the engine terminates the subprocess and
#                        the Swift CoreClient detects the SIGCHLD
#                        and surfaces it — same UX as before, just
#                        without unwinding through every frame.
# - strip = "symbols"  → drop the symbol table from the shipped
#                        binary; debug info is preserved in the
#                        separate dSYM Xcode generates anyway.
# - debug = false      → no debug info in the release binary
#                        itself (was implicit; making it explicit
#                        documents the intent).
#
# Together these shave the cool-tunnel-core binary from ~6 MB to
# ~3.2 MB and meaningfully tighten the hot paths in
# `monitor_loop`, `redaction::redact`, and `Debouncer::admit` —
# noticeable on Intel Macs and 8 GB Apple Silicon machines that
# can't afford a chunky engine.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
