[package]
name = "cool-tunnel-core"
version = "3.0.0"
edition = "2021"
rust-version = "1.80"
description = "Cross-platform Rust engine for Cool Tunnel — JSON-over-stdio client and HTTP server modes"
license = "AGPL-3.0-only"
authors  = ["coolwhite LLC"]
repository = "https://github.com/coo1white/cool-tunnel"
homepage = "https://github.com/coo1white/cool-tunnel"
documentation = "https://github.com/coo1white/cool-tunnel/tree/main/core"
readme = "../README.md"
keywords = ["proxy", "sing-box", "vless", "reality", "tunnel", "macos", "censorship"]
categories = ["command-line-utilities", "network-programming"]
publish = false

[lib]
name = "cool_tunnel_core"
path = "src/lib.rs"

[[bin]]
name = "cool-tunnel-core"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "io-std",
    "sync",
    "time",
    "signal",
    "net",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Server-mode HTTP API (--mode server only). default-features=off
# keeps tower-http / matchit-fs / multipart out of the universal binary.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
# Direct tower dep for ConcurrencyLimitLayer in server_mode::router()
# (caps in-flight at 64; partial slow-loris mitigation, full body-read
# timeout deferred).
tower = { version = "0.5", default-features = false, features = ["limit"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[profile.release]
# Tuned for the shipped engine subprocess: ~6 MB → ~3.2 MB and
# tighter hot paths in monitor_loop / redaction::redact / Debouncer::admit.
# panic=abort is safe because a panic in the engine terminates the
# subprocess; Swift CoreClient detects SIGCHLD and surfaces it.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
